<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/linkNoticia"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/link"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechaNoticia"
        android:autofillHints="" />

    <EditText
        android:id="@+id/fechaNoticia"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/fecha"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autorNoticia"
        android:autofillHints="" />

    <EditText
        android:id="@+id/titularNoticia"
        android:layout_width="320dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/titular"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/autorNoticia"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/autor"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titularNoticia"
        android:autofillHints="" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="30dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkNoticia" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/cancelar"
        app:layout_constraintStart_toEndOf="@+id/ok"
        app:layout_constraintTop_toBottomOf="@+id/linkNoticia" />
</androidx.constraintlayout.widget.ConstraintLayout>